<resources>
    <string name="app_name">ConnectNow</string>
    <string name="agora_app_id" translatable="false">ba84fbae95d545f39cb93f4e3bfd0a90</string>
    <string name="agora_access_token" translatable="false">006ba84fbae95d545f39cb93f4e3bfd0a90IAAaIn7b08iwdvkiqZBpP/gkR2JB9Gf2i254FX1gQlV8b+IVUyEAAAAAEAALtir+qMSGYAEAAQCmxIZg</string>
    <string name="title_activity_live_streaming">LiveStreaming</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="inject">Inject</string>
    <string name="stopinject">StopInject</string>
    <string name="publish">Publish</string>
    <string name="stoppublish">StopPublish</string>
    <string name="url">Url</string>
    <string name="channel_id">Channel ID</string>
    <string name="ex_channel_id">Destination Channel ID</string>
    <string name="encryption_password">Encryption Password</string>
    <string name="join">Join</string>
    <string name="blur">Open Blur</string>
    <string name="open">Open</string>
    <string name="closeblur">Close Blur</string>
    <string name="leave">Leave</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="unpublish">Unpublish</string>
    <string name="permission">Please granted the request permissions</string>
    <string name="earpiece">Earpiece</string>
    <string name="speaker">Speaker</string>
    <string name="openmicrophone">OpenMicrophone</string>
    <string name="closemicrophone">CloseMicrophone</string>
    <string name="closesuperr">Close Super Resolution</string>
    <string name="opensuperr">Open Super Resolution</string>
    <string name="sendmeta">Send Metadata</string>
    <string name="quickswitchtips">Make sure you have set up the channel as the comments in the QuickSwitchChannel class say, or you will see a blank.</string>
    <string name="nobroadcaster">Waiting for the broadcaster</string>
    <string name="channelstr">Channel:%s</string>
    <string name="swiptips">You can swipe left and right to switch channels</string>
    <string name="selectrole">Please choose your role</string>
    <string name="broadcaster">BROADCASTER</string>
    <string name="audience">AUDIENCE</string>
    <string name="localvideo">LocalVideo</string>
    <string name="screenshare">ScreenShare</string>
    <string name="camera">Camera</string>
    <string name="rendermode">RenderMode:%s</string>
    <string name="alert_no_local_video_message">Local video share will not be accessible.\n Please copy your MP4 video file to %s and change the name as localvideo.mp4.</string>
    <string name="lowversiontip">The system version is too low to use this feature; please use Android 5.0 System.</string>
    <string name="resolution">Resolution</string>
    <string name="framerate">Frame Rate</string>
    <string name="video_orientation">Video Orientation</string>
    <string name="ORIENTATION_MODE_ADAPTIVE">Adaptive</string>
    <string name="ORIENTATION_MODE_FIXED_LANDSCAPE">Fixed Landscape</string>
    <string name="ORIENTATION_MODE_FIXED_PORTRAIT">Fixed Portrait</string>
    <string name="chanel_support_char" translatable="false">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890 !#$%()+-:;&lt;=.>?@[]^_{}|~,&amp;</string>
    <string name="fit" translatable="false">Fit</string>
    <string name="hidden" translatable="false">Hidden</string>
    <string name="setting">Setting</string>
    <string name="sdkversion">SDK Version</string>
    <string name="sdkversion1">V%s</string>
    <string name="sent">Sent:%s</string>
    <string name="received">Received:%s</string>
    <string name="bgm_off">BGM OFF</string>
    <string name="bgm_on">BGM ON</string>
    <string name="effect_on">Effect ON</string>
    <string name="effect_off">Effect OFF</string>
    <string name="mixing_volume">Mixing Volume</string>
    <string name="bitrate">Bitrate</string>
    <string name="ok">OK</string>
    <string name="enable_3d_voice">3D Voice</string>
    <string name="enable_pitch">Pitch Correction</string>
    <string name="_3d_voice_circle_in_second">3D Voice Circle in Second</string>
    <string name="enable_publish">Start Co-host</string>
    <string name="disnable_publish">Stop Co-host</string>
    <string name="enable_low_latency">Enable Ultra Low Latency</string>
    <string name="disable_low_latency">Disable Ultra Low Latency</string>
    <string name="ai_denoise">AI Denoise</string>
    <string name="item_joinaudio">Live Interactive Audio Streaming</string>
    <string name="item_joinvideo">Live Interactive Video Streaming</string>
    <string name="item_quickswitck">Quick Switch Channel</string>
    <string name="item_adjustvolume">Adjust the Volume</string>
    <string name="item_joinmultichannel">Join Multiple Channel</string>
    <string name="item_precalltest">Pre-call Tests</string>
    <string name="item_hostacrosschannel">Relay Streams across Channels</string>
    <string name="item_setaudioprofile">Set the Audio Profile</string>
    <string name="item_playaudiofiles">Play Audio Files</string>
    <string name="item_voiceeffects">Set the Voice Beautifier and Effects</string>
    <string name="item_mediaplayerkit">MediaPlayer Kit</string>
    <string name="item_geofencing">Regional Connection</string>
    <string name="item_rtmpstreaming">Push Streams to CDN</string>
    <string name="item_rtmpinjection">Inject Online Media Stream</string>
    <string name="item_pushexternal">Custom Video Source(Push)</string>
    <string name="item_switchexternal">Custom Video Source(MediaIO)/Share the Screen</string>
    <string name="item_cameraorscreen">Switch Camera and Screen Share</string>
    <string name="item_customaudiosource">Custom Audio Source/Renderer</string>
    <string name="item_customremoterender">Custom Video Renderer</string>
    <string name="item_processraw">Raw Video/Audio Data</string>
    <string name="item_videometadata">Video Metadata(SEI)</string>
    <string name="item_streamencrypt">Media Stream Encryption(Custom Encoder)</string>
    <string name="item_channelencryption">Media Stream Encryption</string>
    <string name="item_setvideoprofile">Set the Video Profile</string>
    <string name="item_incallreport">Report In-call Statistics</string>
    <string name="item_superresolution">Super Resolution</string>
    <string name="item_livestreaming">RTC Live Streaming</string>
    <string name="item_twoProcessScreenShare">Multi Process - Screen Sharing</string>
    <string name="item_raw_audio">Raw Audio Data</string>
    <string name="item_senddatastream">Send Data Stream</string>
    <string name="item_arcore">ARCore</string>
    <string name="joinchannelaudio">This example demonstrates how to use the SDK to join channels for voice only calls.</string>
    <string name="joinchannelvideo">This example demonstrates how to use the SDK to join channels for audio and video calls.</string>
    <string name="adjustvolume">This example demonstrates how to use the SDK to adjust in cal volume.</string>
    <string name="precalltest">This example demonstrates how to use the SDK to check uplink network condition before joining the  channel.</string>
    <string name="customaudio">This example demonstrates how to use custom audio source and custom audio sink API to do Audio capture and renderer. </string>
    <string name="customremoterender">This example demonstrates how to customize the functions of the remote video stream renderer during audio and video calls.</string>
    <string name="processrawdata">This example demonstrates how to obtain raw data through callback during audio and video calls, and how to return the data to the SDK after processing.\nPS:Bare data includes video frames and audio frames</string>
    <string name="pushexternalvideo">This example demonstrates how to use the active push mode to collect video during audio and video calls.</string>
    <string name="quickswitchchannel">This example demonstrates how to quickly switch channels during audio and video calls.</string>
    <string name="joinmultichannel">This example demonstrates how to join multiple channels during audio and video calls.</string>
    <string name="rtmpinjection">This example demonstrates how to input and render an online media stream during an audio and video call.</string>
    <string name="rtmpstreaming">This example demonstrates how to use the bypass streaming function during an audio and video call.\nPS:Need to cooperate with RTMP server to realize the function.</string>
    <string name="streamencrypt">This example demonstrates how to encrypt and decrypt audio and video frames during audio and video calls.</string>
    <string name="switchexternalvideo">This example demonstrates how to use MediaIO to collect video and share screen during audio and video call.</string>
    <string name="switchcamerascreen">This example demonstrates how video can be flexibly switched between the camera stream and the screen share stream during an audio-video call.</string>
    <string name="videometadata">This example demonstrates how to send meta information along with video frames during audio and video calls.</string>
    <string name="geofencing">This example demonstrates how to use Area Code to enable SDK geographical fencing feature.</string>
    <string name="setaudioprofile">This example demonstrates how to use audio profile and audio scenario to adjust audio configurations.</string>
    <string name="playaudiofiles">This example demonstrates how to play and manage audio effect and audio mixing files.</string>
    <string name="voiceeffects">This example demonstrates how to use embedded audio effects in SDK.</string>
    <string name="mediaplayerkit">This example demonstrates how to use MediaPlayer Kit. It is one of components for Agora SDK.</string>
    <string name="incallstats">This example demonstrates how to display in call statistics.</string>
    <string name="hostacrosschannel">This example demonstrates how to transfer media streaming to another rtc channel.</string>
    <string name="channelencryption">This example demonstrates how to encrypt and decrypt audio and video frames during audio and video calls.</string>
    <string name="setvideoprofile">This example demonstrates how to use VideoEncoderConfiguration to adjust video configurations.</string>
    <string name="superresolution">This example demonstrates how to use the SDK to display remote video in super resolution.</string>
    <string name="livestreaming">This example demonstrates how to use live streaming api to switch client role in channel.</string>
    <string name="multiProcessScreenShare">This example demonstrates how to use additional process to do screen sharing and camera sharing at the same time.</string>
    <string name="arcore">This example shows how to use RTC Engine to share Artifactial Reality App to remote audience. AR module is based on Google ARCore in this Example.</string>
    <string name="senddatastream">This example shows how to use sendDataStream API to send your custom data along with Video Frame in Channel.</string>
    <string name="rawaudio">This example shows how to register Audio Observer to engine for extract raw audio data during RTC communication</string>
    <string name="loopback">Audio Loopback</string>
    <string name="mix_control">Audio Mixing Control</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="mixing_publish_vol">Mixing Publish Vol</string>
    <string name="mixing_playout_vol">Mixing Playout Vol</string>
    <string name="effect_control">Effect Control</string>
</resources>